# station_converter_ja

./: .dockerignore  .gitignore  AGENTS.md  API_SPEC.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  README_EN.md  deny.toml  docker-compose.local.yml  docker-compose.yml  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  container-images.yml  release-sqlite.yml  scorecard.yml  security.yml  terraform-fmt.yml
deploy/: README.md
deploy/argocd/: README.md
deploy/helm/station-converter-ja/: Chart.yaml  values.yaml
deploy/k8s/base/: README.md
deploy/systemd/: README.md  station-converter-ja-api.service  station-converter-ja-ingest-n02.service  station-converter-ja-ingest-n02.timer  station-converter-ja.env.example
docs/: API.md  ARCHITECTURE.md  ARTIFACTS.md  CONTAINER_IMAGES.md  DATABASE.md  DATA_FRESHNESS.md  DATA_LICENSE.md  DATA_QUALITY.md  DEPLOY.md  FAQ.md  INDEX.md  INGEST_HARDENING_PLAN.md  OBSERVABILITY.md  OPENAPI.md  OPERATIONS.md  QUICKSTART_API.md  QUICKSTART_SQLITE.md  REDIS_CACHE.md  RELEASE.md  RELEASE_CHECKLIST.md  ROADMAP.md  SOURCE_POLICY.md
frontend/: .env.local.example  README.md  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/address-search/: route.ts
frontend/app/examples/address-search/: page.tsx
frontend/app/examples/line-search/: page.tsx
frontend/app/examples/nearby-search/: page.tsx
frontend/app/examples/operator-search/: page.tsx
frontend/app/examples/station-search/: page.tsx
frontend/scripts/: generate-station-sdk.mjs
frontend/src/components/: station-example-ui.tsx
frontend/src/lib/: address-search.ts  dataset-status.ts  station-sdk.ts  use-dataset-overview.ts
infra/terraform/: README.md
infra/terraform/modules/service_contract/: outputs.tf  variables.tf
launcher/: README.md  quickstart_tui.py  station_converter_ja.json
launcher/tests/: test_quickstart_tui.py
scripts/: build_release_bundle.py  build_sqlite_from_postgres.sh  install_release_binaries.sh  onboard.sh  package_sqlite_release.sh  publish_sqlite_release.sh  release_sqlite_artifact.sh  setup_nix_docker.sh  verify_ingest_export.sh  verify_release_bundle.py  verify_repo.sh  verify_sqlite_reproducibility.sh
storage/migrations/mysql/: 0001_init.sql
storage/migrations/postgres/: 0001_init.sql
storage/migrations/sqlite/: 0001_init.sql
storage/schema/: README.md
storage/schema/examples/: n02_fixture_dump.sql
testdata/n02/UTF-8/: N02-24_Station.geojson
worker/api/: .env.example  Cargo.toml  Dockerfile
worker/api/src/: error.rs  main.rs  openapi.rs  schema.rs
worker/crawler/: .env.example  Cargo.toml  Dockerfile
worker/crawler/src/: lib.rs  main.rs  n02.rs
worker/ops/: .env.example  Cargo.toml  Dockerfile
worker/ops/src/: export_sqlite.rs  main.rs  parity.rs  validate_ingest.rs
worker/shared/: Cargo.toml
worker/shared/src/: config.rs  db.rs  job_lock.rs  lib.rs  model.rs
