[package]
name = "station-ops"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
station-crawler = { path = "../crawler" }
station-shared = { path = "../shared" }
