[package]
name = "station-ops"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zip.workspace = true
station-crawler = { path = "../crawler" }
station-shared = { path = "../shared" }
